--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Disabled Parents Support</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Disabled Parents Support</h1>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="resources.html">Resources</a> |
+            <a href="tips.html">Tips</a> |
+            <a href="workshops.html">Workshops</a> |
+            <a href="sponsors.html">Sponsors</a> |
+            <a href="donate.html">Donate</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Welcome</h2>
+            <p>This platform helps parents of disabled youth access resources, tips, and support.</p>
+        </section>
+
+        <section>
+            <h2>Latest Tip</h2>
+            <p>Use short, consistent routines at home to help your child feel secure.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Disabled Parents Support | All content is free</p>
+    </footer>
+    <script src="js/main.js"></script>
+</body>
+</html>
 
