--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resources - Disabled Parents Support</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Resources</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="resources.html">Resources</a> |
+      <a href="tips.html">Tips</a> |
+      <a href="workshops.html">Workshops</a> |
+      <a href="sponsors.html">Sponsors</a> |
+      <a href="donate.html">Donate</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Local Services</h2>
+      <ul>
+        <li>Therapy Center ABC - Location: Cape Town - Phone: 0123456789</li>
+        <li>NGO Helping Hands - Location: Johannesburg - Phone: 0987654321</li>
+        <li>Online Resources: <a href="https://www.parentreality.co.za" target="_blank">ParentReality</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Submit a Resource</h2>
+      <p>If you know a helpful resource, please email us at <a href="mailto:support@disabledparents.org">support@disabledparents.org</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Disabled Parents Support</p>
+  </footer>
+</body>
+</html>
