--- a/tips.html
+++ b/tips.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tips - Disabled Parents Support</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Tips & Guides</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="resources.html">Resources</a> |
+      <a href="tips.html">Tips</a> |
+      <a href="workshops.html">Workshops</a> |
+      <a href="sponsors.html">Sponsors</a> |
+      <a href="donate.html">Donate</a>
+    </nav>
+  </header>
 
+  <main>
+    <section>
+      <h2>Weekly Tips</h2>
+      <ul>
+        <li>Keep routines short and consistent.</li>
+        <li>Break tasks into smaller steps for your child.</li>
+        <li>Use positive reinforcement frequently.</li>
+        <li>Document progress to track improvements.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Printable Guides</h2>
+      <p>Download low-data PDFs for offline use: <a href="#">Sample Guide PDF</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Disabled Parents Support</p>
+  </footer>
+</body>
+</html>
