--- a/workshops.html
+++ b/workshops.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Workshops - Disabled Parents Support</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Workshops & Events</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="resources.html">Resources</a> |
+      <a href="tips.html">Tips</a> |
+      <a href="workshops.html">Workshops</a> |
+      <a href="sponsors.html">Sponsors</a> |
+      <a href="donate.html">Donate</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Upcoming Workshops</h2>
+      <ul>
+        <li>Introduction to Home Therapy - Date: 20 Oct 2025 - <a href="#">Register</a></li>
+        <li>Parenting Strategies for ADHD - Date: 27 Oct 2025 - <a href="#">Register</a></li>
+        <li>Community Support Meet-Up - Date: 3 Nov 2025 - <a href="#">Register</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Past Workshops</h2>
+      <p>Check out recordings: <a href="#">Sample Workshop Video</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Disabled Parents Support</p>
+  </footer>
+</body>
+</html>
