--- a/sponsors.html
+++ b/sponsors.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sponsors - Disabled Parents Support</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Our Sponsors</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="resources.html">Resources</a> |
+      <a href="tips.html">Tips</a> |
+      <a href="workshops.html">Workshops</a> |
+      <a href="sponsors.html">Sponsors</a> |
+      <a href="donate.html">Donate</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Thank You to Our Sponsors</h2>
+      <ul>
+        <li><a href="https://www.exampletherapy.com" target="_blank">Example Therapy Center</a></li>
+        <li><a href="https://www.specialneedsbooks.com" target="_blank">Special Needs Books</a></li>
+        <li><a href="https://www.ngosupport.org" target="_blank">NGO Support</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Become a Sponsor</h2>
+      <p>Email us at <a href="mailto:support@disabledparents.org">support@disabledparents.org</a> to sponsor resources or events.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Disabled Parents Support</p>
+  </footer>
+</body>
+</html>
