--- a/donate.html
+++ b/donate.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Donate - Disabled Parents Support</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Donate & Support</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="resources.html">Resources</a> |
+      <a href="tips.html">Tips</a> |
+      <a href="workshops.html">Workshops</a> |
+      <a href="sponsors.html">Sponsors</a> |
+      <a href="donate.html">Donate</a>
+    </nav>
+  </header>
 
+  <main>
+    <section>
+      <h2>Support Our Work</h2>
+      <p>We provide free resources and guidance to parents of disabled youth. Any donation helps keep the platform running.</p>
+      <ul>
+        <li><a href="https://www.paypal.com/donate" target="_blank">Donate via PayPal</a></li>
+        <li>For South African users: SnapScan / Flutterwave links here</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Disabled Parents Support</p>
+  </footer>
+</body>
+</html>
