--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Disabled Parents Support</title>
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Default CSS is enhanced -->
+  <link id="pagestyle" rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -17,6 +18,7 @@
       <a href="sponsors.html">Sponsors</a> |
       <a href="donate.html">Donate</a>
     </nav>
+    <button id="toggleStyle">Switch to Simple View</button>
   </header>
 
   <main>
@@ -24,16 +26,12 @@
       <h2>Welcome</h2>
       <p>This platform helps parents of disabled youth access resources, tips, workshops, and support.</p>
     </section>
-
-    <section>
-      <h2>Latest Tip</h2>
-      <p>Use short, consistent routines at home to help your child feel secure.</p>
-    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Disabled Parents Support | All content is free</p>
+    <p>&copy; 2025 Disabled Parents Support</p>
   </footer>
+
   <script src="js/main.js"></script>
 </body>
 </html>
